Upgrading LMAX Disruptor